SimpleComplex/Config 1.x, 2017-10-10
------------------------------------
- .ini sectioned flat config support long cache keys.
- Release 1.2.

SimpleComplex/Config 1.x, 2017-10-03
------------------------------------
- Fix that (sectioned config) empty section must be object, not array;
  PHP json_encode() encodes empty array as array, even in non-assoc mode.
- Release 1.1.1.

SimpleComplex/Config 1.x, 2017-09-24
------------------------------------
- Release 1.1.

SimpleComplex/Config 1.x, 2017-09-22
------------------------------------
- Major bug fix: eliminated risk of dupe key scalar values become array.
  Removed warnings from .ini-files' documentation.

SimpleComplex/Config 1.x, 2017-09-02
------------------------------------
- ConfigKey accommodated to fit altered Cache\CacheKey.
- Interfaces moved to sub dir/namespace.

SimpleComplex/Config 1.x, 2017-08-30
------------------------------------
- README supposedly complete.

SimpleComplex/Config 1.x, 2017-08-27
------------------------------------
- Cache store name prefix is now 'config.'; was 'config_'.
- New CLI command config-list-stores.

SimpleComplex/Config 1.x, 2017-08-24
------------------------------------
- CLI commands must respect new command 'silent' property.
- CLI 'get' command default to print instead default to return the value.

SimpleComplex/Config 1.x, 2017-08-23
------------------------------------
- Important: ini based configuration must use (look for)
  .[config store name].ini files; not simply .ini files.
- Class constant IniConfigBase::FILE_EXTENSTIONS no longer exists.

SimpleComplex/Config 1.x, 2017-08-19
------------------------------------
- IniSectionedConfig shan't delete the whole section upon just because the key
  to be deleted is the last in the array.
  And it shan't do anything at all if the key doesn't exist.

SimpleComplex/Config 1.x, 2017-08-17
------------------------------------
- Export ini file based configuration: sort by section.
